Bugfix: popup to add windows was too far away from top of the screen on smaller screens

--- a/frontend/src/components/views/Dashboard/StreamList/WindowTicks/WindowOptions/styles.module.scss
+++ b/frontend/src/components/views/Dashboard/StreamList/WindowTicks/WindowOptions/styles.module.scss
@@ -61,4 +61,9 @@
     right: 0;
     transform: translate(0, var(--y-translate));
   }
+
+  @media (max-width: 500px) {
+    top: 40px;
+    transform: translate(0);
+  }
 }
